--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,6 +79,7 @@
     #collapseFilter.d-md-block {
         padding: 30px 0px;
     }
+
 }
 
 
@@ -267,6 +268,11 @@
     }
     .input_btn_main {
         width: 90%;
+    }
+    .btn_main {
+        width: 200px;
+        margin: 0 auto;
+        text-align: center;
     }
 }
 
@@ -665,5 +671,8 @@
         width: 100%;
         padding-top: 90px;
     }
+    .banner_taital {
+        font-size: 40px;
 
+    }
 }
