Added animation to containers

--- a/css/style.css
+++ b/css/style.css
@@ -1024,3 +1024,30 @@ button {
 .copyright_text a:hover {
     color: #e27141;
 }
+
+
+.hiddenGjin {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 1s;
+
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+
+.effect:nth-child(2) {
+    transition-delay: 200ms;
+}
+.effect:nth-child(3) {
+    transition-delay: 400ms;
+}
+.effect:nth-child(4) {
+    transition-delay: 600ms;
+}
+
