--- a/css/responsive.css
+++ b/css/responsive.css
@@ -675,4 +675,17 @@
         font-size: 40px;
 
     }
+    .hiddenGjin {
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateX(-100%);
+        transition: all 1s;
+    
+    }
+    
+    .show {
+        opacity: 1;
+        filter: blur(0);
+        transform: translateX(0);
+    }
 }
