Edited footer bg to solar panels and type

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -447,7 +447,7 @@
         margin: 0 auto;
     }
     .footer_section {
-        background-image: url(../images/footer-mobile-bg.png);
+        background-image: url(../images/footer-mobile-bgsolar.jpg);
         background-size: cover;
         padding: 50px 0px;
     }
@@ -645,7 +645,7 @@
         margin: 0 auto;
     }
     .footer_section {
-        background-image: url(../images/footer-mobile-bg.png);
+        background-image: url(../images/footer-mobile-bgsolar.jpg);
         background-size: cover;
         padding: 50px 0px;
     }
