--- a/css/style.css
+++ b/css/style.css
@@ -907,7 +907,7 @@ button {
 .footer_section {
     width: 100%;
     float: left;
-    background-image: url(../images/footer-bg.png);
+    background-image: url(../images/footer-bgsolar.png);
     height: auto;
     padding-top: 250px;
     background-size: 100% 100%;
