--- a/css/responsive.css
+++ b/css/responsive.css
@@ -349,7 +349,7 @@
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
         color: #ffffff;
-        background: blue;
+        background: #000;
     }
     .navbar-light .navbar-nav .active>.nav-link,
     .navbar-light .navbar-nav .nav-link.active,
@@ -547,7 +547,7 @@
     .navbar-light .navbar-nav .nav-link:focus,
     .navbar-light .navbar-nav .nav-link:hover {
         color: #ffffff;
-        background: red;
+        background: #000;
     }
     .navbar-light .navbar-nav .active>.nav-link,
     .navbar-light .navbar-nav .nav-link.active,
