--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,11 @@ button {
     background-color: #000d10;
 }
 
+.photoIndex {
+    margin-top: 50px;
+    border-radius: 10%;
+}
+
 
 /* services section end */
 
@@ -1031,7 +1036,12 @@ button {
     filter: blur(5px);
     transform: translateX(-100%);
     transition: all 1s;
-
+}
+.hiddenPhotoIndex {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(30%);
+    transition: all 1s;
 }
 
 .show {
