--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,25 @@ button {
     float: left;
     text-align: center;
     padding: 20px 0px 20px 0px;
+    backdrop-filter: blur(5px);
+    
 }
+
+input[type=submit] {
+    color: white;
+    padding: 5px 70px; 
+    background:#000; 
+    border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px; 
+    transition-duration: 0.4s; /* Transition effects */
+    cursor: pointer; /* Pointer cursor on hover */
+}
+input[type=submit]:hover {
+    background-color: #373737; /* Darker green on hover */
+}
+
 
 .logo_mobile {
     width: 100%;
@@ -264,6 +282,7 @@ button {
     width: 100%;
     float: left;
     display: none;
+    backdrop-filter: blur(5px);
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -345,6 +364,7 @@ button {
     background-image: url(../images/header-bg.png);
     background-size: 100%;
     padding: 10px 0px 0px 0px;
+    
 }
 
 
@@ -872,7 +892,7 @@ button {
     margin-bottom: 20px;
     padding: 10px 15px;
     border: 0px;
-    border: 1px solid #2b2278 !important;
+    border: 1px solid #000 !important;
 }
 .massage-bt {
     width: 100%;
@@ -882,27 +902,9 @@ button {
     margin-bottom: 20px;
     padding: 10px 15px;
     border: 0px;
-    border: 1px solid #2b2278 !important;
+    border: 1px solid #000 !important;
 }
-.send_btn {
-    width: 170px;
-    margin: 0 auto;
-    text-align: center;
-}
-.send_btn a {
-    width: 100%;
-    float: right;
-    text-align: center;
-    font-size: 20px;
-    color: #ffffff;
-    border-radius: 30px;
-    background-color: #000d10;
-    padding: 7px;
-}
-.send_btn a:hover {
-    color: #000000;
-    background-color: #000;
-}
+
 /* contact section end */
 
 
